src/test/custom/invalid/import/duplicateFunc.wacc
# contain duplicate function define with its import

import duplicateFunc.hwacc

begin
  int f() is 
    return 0
  end

  int a = 0
  
end
